objects/Panel_CDC__e.object
<CustomObject>
    <description>Panel change data capture events sent from SFDC.</description>
    <fields>
        <fullName>isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Successful change of state of a work order.</description>
        <label>isSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recordID__c</fullName>
        <description>ID of the record.</description>
        <label>recordID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serial_no__c</fullName>
        <description>Serial number of the related asset.</description>
        <label>serial_no</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Panel CDC</label>
    <pluralLabel>Panel CDC</pluralLabel>
</CustomObject>